--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  padding: 20px;
 }
 
 .App-logo {
@@ -21,4 +21,71 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.container{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #999;
+}
+
+.tabbed-container ul {
+  margin: 0;
+  padding: 0;
+  list-style:  none;
+  margin-top: 20px;
+}
+
+.tabbed-container li {
+  float: left;
+  margin-right: 15px;
+}
+
+.tabbed-container li  a {
+  display: block;
+  padding: 20px;
+  background-color: #ccc;
+  border: 1px solid #999;
+}
+
+.image-content {
+  clear: both;
+  padding: 20px;
+}
+
+.image-content h2 {
+  width : 500px;
+  display: inline-block;
+}
+
+.image-content select {
+  display: inline-block;
+  float: right;
+  height: 50px;
+  width: 150px;
+}
+
+.image-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+.image-list li {
+  float: left;
+  position: relative;
+  padding-bottom: 30px;
+}
+
+.image-list li  a {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+}
+
+.image-day {
+  text-align: center;
 }
